<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".signin.SignInFragment">

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.laba4.signup.SignUpViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



    <ImageView
        android:id="@+id/catBackgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:id="@+id/shadowBackgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background_shape" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/EditTextStyle"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        android:text="@={signUpViewModel.name}"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/shadowBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/shadowBackgroundImageView"
        app:layout_constraintTop_toTopOf="@+id/shadowBackgroundImageView" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/EditTextStyle"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:text="@={signUpViewModel.email}"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/shadowBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/shadowBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/EditTextStyle"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:text="@={signUpViewModel.password}"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/shadowBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/shadowBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        style="@style/EditTextStyle"
        android:layout_marginTop="20dp"
        android:hint="@string/repeatPassword"
        android:text="@={signUpViewModel.repeatPassword}"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/shadowBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/shadowBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <com.bartbergmans.gradientbutton.views.GradientButton
        android:id="@+id/buttonSignUp"
        style="@style/GeneralGradientButton"
        android:textAppearance="@style/AllertaText"
        android:text="@string/sign_up"
        android:onClick="@{()->signUpViewModel.signUp()}"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoToSignIn"
        app:layout_constraintEnd_toEndOf="@+id/shadowBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/shadowBackgroundImageView" />

    <Button
        android:id="@+id/buttonGoToSignIn"
        style="?android:attr/borderlessButtonStyle"
        android:textAppearance="@style/AllertaText"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/have_account"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/shadowBackgroundImageView"
        app:layout_constraintEnd_toEndOf="@+id/shadowBackgroundImageView"
        app:layout_constraintStart_toStartOf="@+id/shadowBackgroundImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>